version/0.3/_sources/api/ansys/rocky/core/_api_stubs/rocky30/plugins/api/ra_custom_calculators/RACustomCurveAndGridProperty.rst.txt
.. py:class:: RACustomCurveAndGridProperty


   .. py:method:: AddCustomCurve(name: str, curve_type: str = ..., output_unit: str = ..., scope: str = ..., sources: Union[dict[str, str], None] = ..., expression: str = ...) -> None


   .. py:method:: EditCustomCurve(edit_curve: str, new_name: Union[str, None] = ..., sources: Union[dict[str, str], None] = ..., expression: Union[str, None] = ...) -> None


   .. py:method:: RemoveCustomCurve(name: str) -> None


   .. py:method:: AddCustomProperty(name: str, property_type: str = ..., output_unit: str = ..., scope: str = ..., sources: Union[dict[str, str], None] = ..., expression: str = ...) -> None


   .. py:method:: EditCustomProperty(edit_property: str, new_name: Union[str, None] = ..., sources: Union[dict[str, str], None] = ..., expression: Union[str, None] = ...) -> None


   .. py:method:: RemoveCustomProperty(name: str) -> None


