version/0.4/_sources/api/ansys/rocky/core/_api_stubs/rocky30/plugins/api/ra_custom_calculators/RACustomCurveAndGridProperty.rst.txt






:class:`RACustomCurveAndGridProperty`
=====================================


.. py:class:: ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_custom_calculators.RACustomCurveAndGridProperty


.. py:currentmodule:: RACustomCurveAndGridProperty

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AddCustomCurve`
            - 
          * - :py:attr:`~EditCustomCurve`
            - 
          * - :py:attr:`~RemoveCustomCurve`
            - 
          * - :py:attr:`~AddCustomProperty`
            - 
          * - :py:attr:`~EditCustomProperty`
            - 
          * - :py:attr:`~RemoveCustomProperty`
            - 








Import detail
-------------

.. code-block:: python

    from ansys.rocky.core._api_stubs.rocky30.plugins.api.ra_custom_calculators import RACustomCurveAndGridProperty



Method detail
-------------

.. py:method:: AddCustomCurve(name: str, curve_type: str = ..., output_unit: str = ..., scope: str = ..., sources: Union[dict[str, str], None] = ..., expression: str = ...) -> None

.. py:method:: EditCustomCurve(edit_curve: str, new_name: Union[str, None] = ..., sources: Union[dict[str, str], None] = ..., expression: Union[str, None] = ...) -> None

.. py:method:: RemoveCustomCurve(name: str) -> None

.. py:method:: AddCustomProperty(name: str, property_type: str = ..., output_unit: str = ..., scope: str = ..., sources: Union[dict[str, str], None] = ..., expression: str = ...) -> None

.. py:method:: EditCustomProperty(edit_property: str, new_name: Union[str, None] = ..., sources: Union[dict[str, str], None] = ..., expression: Union[str, None] = ...) -> None

.. py:method:: RemoveCustomProperty(name: str) -> None




